# fastapi-apikey-authentication

./: .env.example  README-PTBR.md  README.md  docker-compose.yaml  pyproject.toml
app/: app.py
app/core/: resources.py  settings.py
app/modules/example/application/: use_cases.py
app/modules/example/domain/: entities.py
app/modules/example/presentation/: docs.py  exceptions.py  routers.py  schemas.py
app/modules/health/application/: enums.py  use_cases.py
app/modules/health/domain/: entities.py  mappers.py
app/modules/health/presentation/: dependencies.py  docs.py  exceptions.py  routers.py  schemas.py
scripts/: directory_tree.py  directory_tree.txt
