[project]
name = "fastapi-clean-architecture-ddd-template"
version = "1.0.0"
description = "A minimal, well-documented FastAPI application that demonstrates API Key authentication via header, query, and cookie, with dependency-based validation, optional scopes, reusable OpenAPI security components, and tests for easy reuse in real projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "hypercorn>=0.17.3",
    "loguru>=0.7.3",
    "orjson>=3.11.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "stackprinter>=0.2.12",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
